JPackage Gradle Plugin 1.1.0
 * added: fileAssociations
 * added: launchers
 * added: addModules
 * added: multiple modulePath parameters
 * deprecated: single modulePath parameter